--- a/conf/grammar.conf
+++ b/conf/grammar.conf
@@ -1,13 +1,60 @@
-#t KEYWORD
-#t IDENTIFIER
-#t INTEGER_NUMBER
-#t REAL_NUMBER
-#t DELIMITER
-#t ASSIGNMENT
-#t REL_OPERATOR
-#t ADD_OPERATOR
-#t MUL_OPERATOR
-#t COMMENT
+#t ADJ
+#t ADV
+#t CARD
+#t CJ
+#t CL
+#t CN
+#t DA
+#t DEM
+#t DFR
+#t DGTR
+#t DGT
+#t DM
+#t EADR
+#t EOE
+#t EXC
+#t GER
+#t GERAUX
+#t IA
+#t IND
+#t INF
+#t INFAUX
+#t INT
+#t ITJ
+#t LTR
+#t MGT
+#t MTH
+#t NP
+#t ORD
+#t PADR
+#t PNM
+#t PNT
+#t POSS
+#t PPA
+#t PP
+#t PPT
+#t PREP
+#t PRS
+#t QNT
+#t REL
+#t STT
+#t SYB
+#t TERMN
+#t UM
+#t UNIT
+#t VAUX
+#t V
+#t WD
+#t LADV
+#t LCJ
+#t LDEM
+#t LDFR
+#t LDM
+#t LITJ
+#t LPRS
+#t LPREP
+#t LQD
+#t LREL
 
 #n <PROGRAM>
 #n <VAR_DECL>
