--- a/conf/grammar.conf
+++ b/conf/grammar.conf
@@ -56,99 +56,113 @@
 #t LQD
 #t LREL
 
-#n <PROGRAM>
-#n <VAR_DECL>
-#n <VAR_DECL_LIST>
-#n <VAR_DECL_LIST*>
-#n <ID_LIST>
-#n <ID_LIST*>
-#n <TYPE>
-#n <SUBPROG_DECLS>
-#n <SUBPROG_DECLS*>
-#n <SUBPROG_DECL>
-#n <ARGS>
-#n <PARAM_LIST>
-#n <PARAM_LIST*>
-#n <COMP_COMMAN>
-#n <OPT_COMMAN>
-#n <COMMAN_LIST>
-#n <COMMAN_LIST*>
-#n <COMMAND>
-#n <COMMAND*>
-#n <ESLE>
-#n <PROC_ACTIV*>
-#n <EXPR_LIST>
-#n <EXPR_LIST*>
-#n <EXPR>
-#n <EXPR*>
-#n <SIMPLE_EXPR>
-#n <SIMPLE_EXPR*>
-#n <TERM>
-#n <TERM*>
-#n <FACTOR>
-#n <FACTOR*>
-#n <SIGNAL>
+#n <PERIODO>
+#n <ORACAO>
+#n <SUJEITO>
+#n <SUJEITO*>
+#n <SEPARADOR>
+#n <SUJEITO_SIMPLES>
+#n <VARIOS_ADJUNTO_ADNOMINAL>
+#n <NUCLEO_SUJEITO>
+#n <NOME>
+#n <ADJUNTO_ADNOMINAL>
+#n <LOCUCAO_ADJETIVA>
+#n <LOCUCAO_ADJETIVA*>
+#n <PREDICADO>
+#n <OBJETO_DIRETO>
+#n <OBJETO_INDIRETO>
+#n <PREDICATIVO_SUJEITO>
+#n <ADJUNTO_ADVERBIAL>
+#n <LOCUCAO_ADVERBIAL>
+#n <COMPLEMENTO_NOMINAL>
+#n <COMPLEMENTO_NOMINAL*>
+#n <LOCUCAO_VERBAL>
+#n <VERBO_AUXILIAR>
+#n <AGENTE_PASSIVA>
+#n <POR_DE>
+#n <SUB_PRON>
+#n <verbo/loc_verb>
+#n <verbo complementar>
 
-#g 32
--1 0 program 2 0 ; -2 -8 -14 0 .
--2 0 var -3
--2 0
--3 -5 0 : -7 0 ; -4
--4 -5 0 : -7 0 ; -4
+#g 26
+-1 -2 -1
+-1 0
+-2 -3 -13 0 .
+-2 -13 -3 0 .
+-3 -6 -4
+-3 0
+-4 -5 -3
 -4 0
--5 2 -6
--6 0 , 2 -6
--6 0
--7 0 integer
--7 0 real
--7 0 boolean
+-5 0 ,
+-5 4
+-6 -7 -8 -7
+-7 -10 -7
+-7 0
 -8 -9
--9 -10 0 ; -9
--9 0
--10 0 procedure 2 -11 0 ; -2 -8 -14
--11 0 ( -12 0 )
--11 0
--12 -5 0 : -7 -13
--13 0 ; -5 0 : -7 -13
--13 0
--14 0 begin -15 0 end
--15 -16
--15 0
--16 -18 -17
--17 0 ; -18 -17
--17 0
--18 2 -19
--18 -14
--18 0 if -24 0 then -18 -20
--18 0 while -24 0 do -18
--18 0 for 2 6 -24 0 to -24 0 do -18
--19 6 -24
--19 -21
--20 0 else -18
--20 0
--21 0 ( -22 0 )
--21 0
--22 -24 -23
--23 0 , -24 -23
--23 0
--24 -26 -25
--25 7 -26
--25 0
--26 -28 -27
--26 -32 -28 -27
--27 8 -28 -27
--27 0
--28 -30 -29
--29 9 -30 -29
--29 0
--30 2 -31
--30 3
--30 4
--30 0 true
--30 0 false
--30 0 ( -24 0 )
--30 0 not -30
--31 0 ( -22 0 )
--31 0
--32 0 +
--32 0 -
+-9 6
+-9 30
+-9 19
+-9 37
+-9 40
+-9 20
+-10 1
+-10 -11
+-10 7
+-10 18
+-10 3
+-10 9
+-10 28
+-10 32
+-10 19
+-10 8
+-10 0
+-11 36 -12
+-12 6
+-12 30
+-12 2
+-13 -25 -16 -17
+-13 -25 -17
+-13 -25 -15 -17
+-13 -25 -14 -17
+-13 -21 -22
+-14 -7 -9 -7 -20
+-15 36 -7 -9 -7 -20
+-16 1
+-16 6
+-16 30
+-16 19
+-16 37
+-16 40
+-16 3
+-16 9
+-16 28
+-17 2
+-17 -18
+-18 36 -19
+-18 0
+-19 6
+-19 30
+-19 1
+-19 2
+-20 36 -7 -9 -7
+-21 45 -26
+-22 -23 -24
+-23 0 por
+-23 0 pela
+-23 0 pelo
+-23 0 pelas
+-23 0 pelos
+-23 0 de
+-23 0 da
+-23 0 do
+-23 0 das
+-23 0 dos
+-24 6
+-24 19
+-24 37
+-24 40
+-25 -21
+-25 46
+-26 16
+-26 20
+-26 35
