--- a/conf/grammar_v4.conf
+++ b/conf/grammar_v4.conf
@@ -71,8 +71,9 @@
 #n <OBJETO_IND>
 #n <ADJUNTO_ADV>
 #n <SUB_PRON>
+#n <EXTRA>
 
-#g 15
+#g 16
 -1 -2 -10 0 .
 -2 -5 -3
 -3 -4 -2
@@ -97,8 +98,8 @@
 -9 6
 -9 30
 -9 1
--10 45 -11
--10 46 -11
+-10 45 -16
+-10 46 -16
 -11 36 -13 -7
 -11 7 -12 -7
 -11 18 -12 -7
@@ -123,3 +124,8 @@
 -15 37
 -15 40
 -15 20
+-16 16 -11
+-16 17 -11
+-16 35 -11
+-16 20 -11
+-16 -11
