--- a/conf/sinonimos.conf
+++ b/conf/sinonimos.conf
@@ -66,6 +66,6 @@ pobre simples humilde miserável indigente carente necessitado desprovido
 velha idosa antiga antiquada envelhecida obsoleta
 gostoso saboroso delicioso apetitoso
 alta elevada ruidosa
-rápido veloz ligeiro acelerado ágil lépido frenético
+rápido veloz ligeiro acelerado ágil frenético
 deliciosos aborosos apetitosos gostosos
 sujo porco emporcalhado poluído imundo
