--- a/conf/sinonimos.conf
+++ b/conf/sinonimos.conf
@@ -34,6 +34,14 @@ modo método técnica conduta habilidade
 bola esfera globo
 música melodia canção
 carro veículo automóvel auto
+animal bicho ser espécime
+comida iguaria
+gato felino bichano
+gatos felinos bichanos
+velha idosa senhora
+tricô costura
+avô vovô avozinho
+avó vovó avozinha
 #a
 bom bondoso generoso caridoso benigno indulgente misericordioso clemente piedoso benfeitor agradável afável encantador prazeroso adequado apropriado conveniente certo correto acertado adaptado competente capaz apto hábil habilitado saboroso delicioso gostoso apetitoso
 grande amplo largo comprido longo grosso extenso vasto alto enorme gigantesco gigante colossal gordo corpulento espaçoso volumoso monstruoso crescido excessivo abundante numeroso imenso grandioso superior extraordinário magnífico
@@ -59,13 +67,15 @@ possível provável capaz viável
 raro incomum singular inusitado
 necessário indispensável imprescindível fundamental essencial básico vital primordial crucial
 pequeno baixo anão nanico
-igual idêntico análogo parecido similar aproximado
+igual idêntico análogo parecido similar
 fino miúdo transparente magro afinado
 impossível improvável inconcebível inadmissível inaceitável inacreditável utópico
 pobre simples humilde miserável indigente carente necessitado desprovido
-velha idosa antiga antiquada envelhecida obsoleta
+velha idosa antiga antiquada envelhecida obsoleta senhora
 gostoso saboroso delicioso apetitoso
 alta elevada ruidosa
 rápido veloz ligeiro acelerado ágil frenético
 deliciosos aborosos apetitosos gostosos
 sujo porco emporcalhado poluído imundo
+#v
+tricotar costurar
