New grammar add

--- a/conf/sinonimos.conf
+++ b/conf/sinonimos.conf
@@ -24,7 +24,7 @@ ideia conceito concepção abstração idealização
 mãe mainha mamãe madre
 pai papai painho
 marido esposo
-espírito alma entidade
+alma entidade assombração
 fim final desfecho término conclusão
 porta portão portal abertura
 pé pata
@@ -73,7 +73,7 @@ impossível improvável inconcebível inadmissível inaceitável inacreditável 
 pobre simples humilde miserável indigente carente necessitado desprovido
 velha idosa antiga antiquada envelhecida obsoleta senhora
 gostoso saboroso delicioso apetitoso
-alta elevada ruidosa
+alta elevada ruidosa barulhenta
 rápido veloz ligeiro acelerado ágil frenético
 deliciosos aborosos apetitosos gostosos
 sujo porco emporcalhado poluído imundo
